samples/_failures_safe/1761254279_0744a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_710d4a84.c: In function ‘main’:
./samples/SAFE/__tmp_710d4a84.c:147:44: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  147 |             if (!multiply_matrices(&mat1, &mat
      |                                            ^~~
      |                                            mat2
./samples/SAFE/__tmp_710d4a84.c:147:44: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_710d4a84.c:147:47: error: expected ‘)’ at end of input
  147 |             if (!multiply_matrices(&mat1, &mat
      |                                   ~           ^
      |                                               )
./samples/SAFE/__tmp_710d4a84.c:147:18: error: too few arguments to function ‘multiply_matrices’
  147 |             if (!multiply_matrices(&mat1, &mat
      |                  ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_710d4a84.c:66:5: note: declared here
   66 | int multiply_matrices(const Matrix *a, const Matrix *b, Matrix *result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_710d4a84.c:147:13: error: expected declaration or statement at end of input
  147 |             if (!multiply_matrices(&mat1, &mat
      |             ^~
./samples/SAFE/__tmp_710d4a84.c:147:13: error: expected declaration or statement at end of input
